# esther_apache_spark

./: .pre-commit-config.yaml  CHANGELOG.md  freshkartmindump.sql  main.py  pyproject.toml  test.txt
.github/workflows/: release.yml
src/pandas/: partie2.ipynb  pipeline_pandas.py
src/pandas_files/: partie2.ipynb  pipeline_pandas.py
src/pyspark/: pipeline_pyspark.py  pipeline_pyspark_test.ipynb
src/pyspark_files/: pipeline_pyspark.py  pipeline_pyspark_test.ipynb
tests/: conftest.py  test_pipeline_equivalences.py
tutos/: tuto_rdd_pyspark(2).ipynb  tutoriel_pandas.ipynb
