[project]
name = "esther-apache-spark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.7.0",
    "ju>=0.1.31",
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "path>=17.1.1",
    "pyspark>=4.0.1",
]

[project.optional-dependencies]
dev = [
    "python-semantic-release>=9.8.2",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_source = "tag_or_file"
tag_format = "v{version}"
commit_parser = "conventional"
changelog_file = "CHANGELOG.md"
build_command = "uv build"
upload_to_repository = false
upload_to_release = false

[tool.semantic_release.branches.master]
match = "master"

[tool.semantic_release.branches.develop]
match = "develop"
prerelease = true
